# hibf

./: .clang-format  README.md
.github/workflows/: ci_coverage.yml  ci_documentation.yml  ci_iwyu.yml  ci_license.yml  ci_lint.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml  ci_util.yml  readme_snippet.yml  test_pr_target.yml  update_cookbook.yml
cmake/: configuration.cmake
include/hibf/: config.hpp  interleaved_bloom_filter.hpp  platform.hpp  version.hpp
include/hibf/contrib/: robin_hood.hpp
include/hibf/layout/: data_store.hpp
include/hibf/misc/: counting_vector.hpp  insert_iterator.hpp  tmax_without_empty_bins.hpp
include/hibf/sketch/: minhashes.hpp
src/: hierarchical_interleaved_bloom_filter.cpp  interleaved_bloom_filter.cpp
test/: hibf-test.cmake
test/cmake/: hibf_require_ccache.cmake
test/include/hibf/test/: iterator_test_template.hpp
test/iwyu/: CMakeLists.txt
test/iwyu/mappings/: iwyu.imp  libcxx.imp
test/performance/ibf/: interleaved_bloom_filter_benchmark.cpp
test/performance/sketch/: hyperloglog_benchmark.cpp
test/snippet/: readme.cpp
test/snippet/ibf/: counting_agent.cpp
test/tutorial/: CMakeLists.txt
test/unit/hibf/sketch/: estimate_kmer_counts_test.cpp
util/: CMakeLists.txt  histogram.cpp
